--- a/config.yml
+++ b/config.yml
@@ -92,12 +92,12 @@ params:
     cover:
         hidden: true # hide everywhere but not in structured data
         hiddenInList: true # hide on list pages and home
-        hiddenInSingle: true # hide on single page
+        hiddenInSingle: false # hide on single page
 
-    editPost:
-        URL: "https://github.com/<path_to_repo>/content"
-        Text: "Suggest Changes" # edit text
-        appendFilePath: true # to append file path to Edit link
+#    editPost:
+#        URL: "https://github.com/<path_to_repo>/content"
+#        Text: "Suggest Changes" # edit text
+#        appendFilePath: false # to append file path to Edit link
 
     # for search
     # https://fusejs.io/api/options.html
